---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Added a command to restart translation in case it hangs. Type '/fp-restart-translation' into the console to run it.
  Bugfixes:
    - Fixed a few issues and crashes related to editing modules on machines and beacons
    - Fixed a missing locale string

---------------------------------------------------------------------------------------------------
Version: 1.1.49
Date: 27. 05. 2022
  Bugfixes:
    - Changes a keyboard shortcut that was interferring with game functionality.
    - Fixed fuel not being shown in the compact view
    - Fixed a few minor UI issues related to the production table
    - Fixed a minor rounding issue with compact view machines
    - Fixed an issue where disabling lines on subfloors wouldn't work
    - Fixed an issue where the module slider wouldn't be properly draggable

---------------------------------------------------------------------------------------------------
Version: 1.1.48
Date: 24. 05. 2022
  Changes:
    - Re-added the 'put into cursor' action to the main interface (bound to a simple left click on machines and beacons)
  Bugfixes:
    - Fixed a migration issue under certain circumstances

---------------------------------------------------------------------------------------------------
Version: 1.1.47
Date: 23. 05. 2022
  Changes:
    - Updated Russian localisation (Thanks Astorin!)
    - The preference to hide crating recipes now also works for the 'Deadlock's Crating Machine' mod

---------------------------------------------------------------------------------------------------
Version: 1.1.46
Date: 22. 05. 2022
  Bugfixes:
    - Fixed a crash when opening the main interface in some circumstances

---------------------------------------------------------------------------------------------------
Version: 1.1.45
Date: 22. 05. 2022
  Bugfixes: