@@ -381,6 +381,7 @@ error_recipebook_version_incompatible=Recipe Book’s version is not compatible;
 error_recipebook_lookup_failed=The clicked __1__ could not be found in Recipe Book
 error_linearly_dependant_recipes=Matrix solver inactive; Make sure there’s only one recipe per product
 error_recipe_wrong_floor=__1__ recipes can only be added to the top level of the subfactory
+error_put_into_cursor_failed=__1__ can't be put into the cursor
 warning_no_matrix_configuration_needed=The matrix solver does not need additional configuration
 warning_recipe_disabled=This recipe is not researched yet, so you can’t produce it currently
 warning_module_not_compatible=Your preferred __1__ is not compatible with this machine
