@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     - Added a command to restart translation in case it hangs. Type '/fp-restart-translation' into the console to run it.
   Bugfixes:
     - Fixed a few issues and crashes related to editing modules on machines and beacons
+    - Fixed a crash when trying to put machines into the cursor that can't be blueprinted
     - Fixed a missing locale string
 
 ---------------------------------------------------------------------------------------------------
